# et-landuse

./: .gitignore  README.md  estonia_carbon_layers_spec_corine_biomass_peat_hydrology.md  pyproject.toml  todo.md
.kiro/steering/: product.md  structure.md  tech.md
notebooks/: 01.1_carbon_dataset.ipynb  01.1_validate_features_map.ipynb  01.2_fetch_rohemeeter.ipynb  01_collect_datasets.ipynb  02_simulator_and_baselines.ipynb  03.1_neuroevolution_carbon.ipynb  03.2_neuroevolution_biodiversity.ipynb  03_neuroevolution.ipynb  04_learned_carbon_predictor.ipynb  05_compare_carbon_models.ipynb  06_download_forest_registry.ipynb  07_fetch_forest_details.ipynb  08_train_carbon_predictor.ipynb  09_spatial_join_and_model.ipynb
src/carbon_dataset/: 01_prepare_grid.py  02_process_corine.py  02a_corine_from_v1.py  03_process_biomass.py  04_process_soil_peat.py  05_process_hydrology.py  06_derive_scores.py  07_export_dataset.py  09_fetch_rohemeeter.py  __init__.py  config.py  forest_carbon_model.py  forest_registry_details.py  forest_registry_wfs.py
src/estonia_landuse/data/: __init__.py  constants.py  download.py  load.py
src/estonia_landuse/optimizer/: nsga2.py  prescriptor.py  seeds.py  trainer.py
src/estonia_landuse/simulator/: actions.py  baselines.py  carbon_learned.py  carbon_nir.py  carbon_tonnes.py  config.py  cost_eur.py  features.py  simulator.py
visualizer/: app.js  export_geojson.py  index.html
