[project]
name = "estonia-landuse-neuroevolution"
version = "0.1.0"
description = "Neuroevolution demo for Estonian county-level land-use planning"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=0.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "shapely>=2.0.0",
    "pyarrow>=14.0.0",
    "requests>=2.31.0",
    "owslib>=0.31.0",
    "scipy>=1.11.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.8.0",
    "folium>=0.15.0",
    "mapclassify>=2.6.0",
    "rasterio>=1.3.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/estonia_landuse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
